Automatically backed up by Learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -8,7 +8,7 @@
   <br>
 
   <label> Edit the Song's Artist: </label>
-  <input type="text" name="Artist Name" value="<%= @song.artist.name %>" id ="Artist Name">
+  <input type="text" name="song[artist]" value="<%= @song.artist.name %>" id ="Artist Name">
 <br>
 
 <label> Edit the Song's Genres: </label>
