--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -7,7 +7,7 @@
   <input type="text" name="song[name]" value="<%= @song.name %>" id="name">
   <br>
 
-  <label> Artist Name</label>
+  <label for="artist_name"> Artist Name</label>
   <input type="text" name="song[artist]" value="<%= @song.artist.name %>" id ="Artist Name">
 <br>
 
