Automatically backed up by Learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -7,8 +7,8 @@
   <input type="text" name="song[name]" value="<%= @song.name %>" id="name">
   <br>
 
-  <label for="artist_name">Artist Name</label>
-  <input type="text" name="artist[name]" value="<%= @song.artist.name %>" id="artist_name">
+  <label> Edit the Song's Artist: </label>
+  <input type="text" name="song[artist]" value="<%= @song.artist.name %>" id ="Artist Name">
 <br>
 
 <label> Edit the Song's Genres: </label>
