--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -8,7 +8,7 @@
   <br>
 
   <label for="Artist Name">Artist Name</label>
-  <input type="checkbox" name="song[artist]" value="<%= @song.artist.name %>" id ="Artist Name">
+  <input type="text" name="artist[name]" value="<%= @song.artist.name %>" id ="Artist Name">
 <br>
 
 <label> Edit the Song's Genres: </label>
