--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,7 +1,7 @@
 <h1>Edit <%= @song.name %></h1>
 
 <form action="/songs/<%= @song.slug %>" method="POST">
-  <input type="hidden" name="_method" value="patch" id="hidden">
+  <input type="hidden" name="_method" value="patch">
 
   <label> Song Name </label>
   <input type="text" name="song[name]" value="<%= @song.name %>" id="name">
