--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -3,7 +3,7 @@
 <form action="/songs/<%= @song.slug %>" method="POST">
   <input type="hidden" name="_method" value="patch">
 
-  <label> Song Name </label>
+  <label for "name">Song Name </label>
   <input type="text" name="song[name]" value="<%= @song.name %>" id="name">
 
   <label for="artist_name">Artist Name</label>
