--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,14 +1,14 @@
 <h1>Edit <%= @song.name %></h1>
 
 <form action="/songs/<%= @song.slug %>" method="POST">
-  <input type="hidden" name="_method" value="patch">
+  <input type="hidden" name="_method" value="PATCH">
 
-  <label for "name">Song Name </label>
-  <input type="text" name="song[name]" value="<%= @song.name %>" id="name">
+  <label for="name">Name</label>
+  <input type="text" name="song[name]" id="name" value="<%= @song.name %>">
 
   <label for="artist_name">Artist Name</label>
-  <input type="text" name="artist[name]" value="<%= @song.artist.name %>" id ="Artist Name">
-
+  <input type="text" name="artist[name]" value="<%= @song.artist.name %>" id="artist_name">
+  
 <label> Edit the Genres: </label>
   <% Genre.all.each do |genre| %>
   <label><%= genre.name %> </label>
