--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,18 +1,19 @@
 <h1>Edit <%= @song.name %></h1>
 
 <form action="/songs/<%= @song.slug %>" method="POST">
-  <input type="hidden" name="_method" value="PATCH">
+  <input type="hidden" name="_method" value="patch">
 
-  <label for="name">Name</label>
+  <label for "name">Song Name </label>
   <input type="text" name="song[name]" id="name" value="<%= @song.name %>">
 
   <label for="artist_name">Artist Name</label>
-  <input type="text" name="artist[name]" value="<%= @song.artist.name %>" id="artist_name">
+  <input type="text" name="artist[name]" value="<%= @song.artist.name %>" id ="Artist Name">
 
+<label> Edit the Genres: </label>
   <% Genre.all.each do |genre| %>
-      <label><%= genre.name %></label>
-      <input type="checkbox" name="genres[]" value="<%= genre.id %>" id="<%= genre.name %>" <%='checked' if @song.genres.include?(genre) %>>
-    <% end %>
+  <label><%= genre.name %></label>
+  <input type="checkbox" name="genres[]" value="<%genre.id %>" id="<%genre.name%>" <=% 'checked' if @song.genres.include?(genre) %>>
+<% end %>
 
-    <input type="submit" value="Save">
-  </form>
+<input type="submit" value="Save">
+</form>
