--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -12,7 +12,7 @@
 <label> Edit the Genres: </label>
   <% Genre.all.each do |genre| %>
   <label><%= genre.name %></label>
-  <input type="checkbox" name="genres[]" value="<%genre.id %>" id="<%genre.name%>" <%='checked' if @song.genres.include?(genre) %>></input>
+  <input type="checkbox" name="genres[]" value="<%genre.id %>" id="<%genre.name%>" <%='checked' if @song.genres.include?(genre) %>></input><br>
 <% end %>
 
 <input type="submit" value="Save">
